--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,21 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div> <%= f.label :first_name %><br />
-  	<%= f.text_field :first_name %> </div>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name),html: {class: "well"})  do |f| %>
+  <%= devise_error_messages!%>
+  <fieldset>
+    <legend>Sign Up</legend>
+  <%= f.input :first_name %>
 
-  <div> <%= f.label :last_name %><br />
-  	<%= f.text_field :last_name %> </div>
+  <%= f.input :last_name %>
 
-  <div> <%= f.label :profile_name %><br />
-  	<%= f.text_field :profile_name %> </div>
+  <%= f.input :profile_name %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <%= f.input :email, :autofocus => true %>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
+  <%= f.input :password, hint: false, error_html: { id: 'password_error'} %>
+  <%= f.input :password_confirmation %>
+  </fieldset>
+  <div><%= f.button :submit, "Sign up" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
